unpackaged/main/default/objects/Influencer_Service_Provider__mdt/Influencer_Service_Provider__mdt.object-meta.xml
<CustomObject>
    <description>US-0011821 - 1.2.2 Influencer (API for channel record)</description>
    <label>Influencer Service Provider</label>
    <pluralLabel>Influencer Service Providers</pluralLabel>
</CustomObject>