unpackaged/main/default/objects/Influencer_Service_Provider__mdt/fields/Instagram_Id__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Id__c</fullName>
    <label>Instagram Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>