unpackaged/main/default/objects/Influencer_Service_Provider__mdt/fields/Mulesoft_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Client_Id__c</fullName>
    <description>Mulesoft Application Client Id</description>
    <label>Mulesoft Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>