unpackaged/main/default/objects/Influencer_Service_Provider__mdt/fields/Mulesoft_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Client_Secret__c</fullName>
    <description>Mulesoft Application Client Secret</description>
    <label>Mulesoft Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>