unpackaged/main/default/objects/Influencer_Service_Provider__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Target Service</description>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>